<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_unidade_saude"
    app:startDestination="@id/relatar">

    <fragment
        android:id="@+id/relatar"
        android:name="com.wwmm.sostecsaude.ui.unidade_saude.Registrar"
        android:label="@string/title_equipamento"
        tools:layout="@layout/fragment_unidade_saude_relatar" />
    <fragment
        android:id="@+id/verPedidos"
        android:name="com.wwmm.sostecsaude.ui.unidade_saude.VerPedidos"
        android:label="@string/title_ver_pedidos_conserto"
        tools:layout="@layout/fragment_unidade_saude_ver_pedidos" />
    <fragment
        android:id="@+id/verOfertas"
        android:name="com.wwmm.sostecsaude.ui.unidade_saude.VerOfertas"
        android:label="@string/title_ofertas_manutencao"
        tools:layout="@layout/fragment_unidade_saude_ver_ofertas" />
</navigation>